--- a/app/src/main/res/layout/fragment_post_list.xml
+++ b/app/src/main/res/layout/fragment_post_list.xml
@@ -9,5 +9,5 @@
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context="com.soucriador.jhonattas.ui.components.PostFragment"
+    tools:context="com.soucriador.jhonattas.ui.fragments.PostFragment"
     tools:listitem="@layout/fragment_post" />
