--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#ccdb38</color>
+    <color name="colorPrimaryLight">#ffff6d</color>
+    <color name="colorPrimaryDark">#98aa00</color>
+
+    <color name="colorAccent">#e91e63</color>
+    <color name="colorAccentLight">#ff6090</color>
+    <color name="colorAccentDark">#b0003a</color>
 
     <color name="orange">#FF3909</color>
-    <color name="colorAccentDark">#00B482</color>
 
+    <color name="colorBlackDark">#000000</color>
     <color name="colorBlack">#555555</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorGrey">#707070</color>
