--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ccdb38</color>
-    <color name="colorPrimaryLight">#ffff6d</color>
-    <color name="colorPrimaryDark">#98aa00</color>
+    <color name="colorPrimaryDark">#7B1FA2</color>
+    <color name="colorPrimaryLight">#E1BEE7</color>
+    <color name="colorPrimary">#9C27B0</color>
 
     <color name="colorAccent">#e91e63</color>
     <color name="colorAccentLight">#ff6090</color>
@@ -15,4 +15,7 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorGrey">#707070</color>
     <color name="colorGreyLight">#8A8A8A</color>
+
+    <color name="viewBg">#f1f5f8</color>
+    <color name="album_title">#4c4c4c</color>
 </resources>
